@@ -1,0 +1,6 @@
+** Command: output 'tnlycf log' 1
+** Command: echo 'stdout: tnlycf log'
+stdout: tnlycf log
+** Command: echo 'stderr: tnlycf log'
+stderr: tnlycf log
+** Command: return 1
